# AskFirst-MultiAgent

./: .env.example  .gitignore  BUILD_PROMPT.md  CLAUDE.md  README.md  pyproject.toml
backend/: config.py  db.py  graph.py  main.py  state.py
backend/agents/: resolver.py  retrieval.py  triage.py
backend/scripts/: generate_kb.py  smoke_graph.py  test_escalation.py  test_interrupt.py
backend/tools/: actions.py  kb.py  llm.py
backend/workflows/: add-action-type.md  handle-ticket.md  run-demo.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Nav.tsx  PipelineTimeline.tsx  Starfield.tsx  motion-bits.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Approvals.tsx  Audit.tsx  Home.tsx  TicketDetail.tsx
